--- a/pom.xml
+++ b/pom.xml
@@ -69,4 +69,13 @@
         </plugins>
     </build>
 
+    <!-- ✅ Added Section: Publish Artifacts to GitHub Packages -->
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages - Maven Repository</name>
+            <url>https://maven.pkg.github.com/OWNER/REPOSITORY</url>
+        </repository>
+    </distributionManagement>
+
 </project>
