--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,34 +8,39 @@ on:
 
 jobs:
   build:
-    name: Build and Package with Maven
+    name: Build with Maven
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      packages: write  # Required to publish to GitHub Packages
-
     steps:
-      - name: Checkout source code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
           distribution: 'temurin'
-          cache: 'maven'
-          server-id: github  # matches <id> in pom.xml
-          server-username: GITHUB_ACTOR
-          server-password: ${{ secrets.GITHUB_TOKEN }}
+          java-version: '17'
+
+      - name: Configure Maven settings
+        run: |
+          mkdir -p ~/.m2
+          cat > ~/.m2/settings.xml <<EOF
+          <settings>
+            <servers>
+              <server>
+                <id>github</id>
+                <username>${{ github.actor }}</username>
+                <password>${{ secrets.GITHUB_TOKEN }}</password>
+              </server>
+            </servers>
+          </settings>
+          EOF
 
       - name: Build with Maven
-        run: mvn -B clean package
+        run: mvn -B package --file pom.xml
 
       - name: List built artifacts
-        run: |
-          echo "Listing target directory contents:"
-          ls -lh target
+        run: ls -l target/
 
   test:
     name: Run Unit Tests
@@ -43,66 +48,47 @@ jobs:
     needs: build
 
     steps:
-      - name: Checkout source code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
           distribution: 'temurin'
-          cache: 'maven'
+          java-version: '17'
 
-      - name: Run JUnit Tests
-        run: mvn -B test
+      - name: Run Unit Tests with JUnit
+        run: mvn -B test --file pom.xml
 
-      - name: Upload test reports
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: junit-test-report
-          path: target/surefire-reports/
-
-  publish:
-    name: Publish to GitHub Packages
+  deploy:
+    name: Deploy Artifact to GitHub Packages
     runs-on: ubuntu-latest
-    needs: test  # Runs only if tests succeed
-    if: success()
-
-    permissions:
-      contents: read
-      packages: write
+    needs: test
 
     steps:
-      - name: Checkout source code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
           distribution: 'temurin'
-          cache: 'maven'
-          server-id: github
-          server-username: GITHUB_ACTOR
-          server-password: ${{ secrets.GITHUB_TOKEN }}
+          java-version: '17'
 
-     - name: Configure Maven settings
-     run: |
-    mkdir -p ~/.m2
-    cat > ~/.m2/settings.xml <<EOF
-    <settings>
-      <servers>
-        <server>
-          <id>github</id>
-          <username>env.USER</username>
-          <password>env.PASSWORD</password>
-        </server>
-      </servers>
-    </settings>
-    EOF
+      - name: Configure Maven settings
+        run: |
+          mkdir -p ~/.m2
+          cat > ~/.m2/settings.xml <<EOF
+          <settings>
+            <servers>
+              <server>
+                <id>github</id>
+                <username>env.USER</username>
+                <password>env.PASSWORD</password>
+              </server>
+            </servers>
+          </settings>
+          EOF
 
-
-
-      - name: Publish package to GitHub Packages
-        run: mvn -B deploy
+      - name: Publish to GitHub Packages
+        run: mvn -B deploy --file pom.xml
