--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,15 +2,16 @@ name: Maven CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   workflow_dispatch:
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build:
-    name: Build with Maven
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -29,8 +30,8 @@ jobs:
             <servers>
               <server>
                 <id>github</id>
-                <username>${{ github.actor }}</username>
-                <password>${{ secrets.GITHUB_TOKEN }}</password>
+                <username>env.USER</username>
+                <password>env.PASSWORD</password>
               </server>
             </servers>
           </settings>
@@ -43,34 +44,27 @@ jobs:
         run: ls -l target/
 
   test:
-    name: Run Unit Tests
     runs-on: ubuntu-latest
     needs: build
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Java
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
-
-      - name: Run Unit Tests with JUnit
+      - name: Run Unit Tests
         run: mvn -B test --file pom.xml
 
   deploy:
-    name: Deploy Artifact to GitHub Packages
     runs-on: ubuntu-latest
     needs: test
+    permissions:
+      contents: read
+      packages: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Java
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
