Update GitHub Actions credentials syntax

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
             <servers>
               <server>
                 <id>github</id>
-                <username>env.USER</username>
-                <password>env.PASSWORD</password>
+                <username>$USER</username>
+                <password>$PASSWORD</password>
               </server>
             </servers>
           </settings>
@@ -77,8 +77,8 @@ jobs:
             <servers>
               <server>
                 <id>github</id>
-                <username>env.USER</username>
-                <password>env.PASSWORD</password>
+                <username>$USER</username>
+                <password>$PASSWORD</password>
               </server>
             </servers>
           </settings>
