--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Maven CI/CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
@@ -11,7 +12,9 @@ permissions:
 
 jobs:
   build:
+    name: Build with Maven
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -36,6 +39,9 @@ jobs:
             </servers>
           </settings>
           EOF
+        env:
+          USER: ${{ secrets.USER }}
+          PASSWORD: ${{ secrets.PASSWORD }}
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
@@ -44,27 +50,34 @@ jobs:
         run: ls -l target/
 
   test:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     needs: build
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Java
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
-      - name: Run Unit Tests
+
+      - name: Run Unit Tests with JUnit
         run: mvn -B test --file pom.xml
 
   deploy:
+    name: Deploy Artifact to GitHub Packages
     runs-on: ubuntu-latest
     needs: test
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Java
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
@@ -83,6 +96,12 @@ jobs:
             </servers>
           </settings>
           EOF
+        env:
+          USER: ${{ secrets.USER }}
+          PASSWORD: ${{ secrets.PASSWORD }}
 
       - name: Publish to GitHub Packages
         run: mvn -B deploy --file pom.xml
+        env:
+          USER: ${{ secrets.USER }}
+          PASSWORD: ${{ secrets.PASSWORD }}
